Update fonr size on input to stop zooming on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+input {
+  font-size: 14px;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
